# ff-router

./: .ff-router.toml.example  .gitignore  Cargo.toml  Info.plist  LaunchAgent.plist  Makefile  README.md  rust-toolchain.toml
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  dependabot-auto-merge.yml  release.yml
crates/ff-router/: Cargo.toml
crates/ff-router-installer/: Cargo.toml
crates/ff-router-installer/src/: app.rs  config.rs  diff.rs  discover.rs  glob_help.rs  install.rs  main.rs  plan.rs
crates/ff-router/src/: config.rs  debug.rs  glob.rs  main.rs
crates/link-router/: Cargo.toml
crates/link-router/src/: main.rs
scripts/: build.sh  check-versions.sh  clean.sh  common.sh  dev-install.sh  install.sh  package.sh  uninstall.sh
