[workspace]
resolver = "3"
members = ["crates/*"]
# Casual `cargo build`/`test` only touch the shipped binary; the heavy installer
# is built on demand with `-p ff-router-installer`. CI uses `--workspace`.
default-members = ["crates/ff-router"]

[workspace.package]
version = "1.2.1"
edition = "2024"
rust-version = "1.85"
license = "MIT OR Apache-2.0"
authors = ["Josiah Bull <jo@partly.com>"]
repository = "https://github.com/josiahbull/ff-router"

# Dependencies shared across workspace crates. Reference from a crate with
# `some-dep = { workspace = true }`.
[workspace.dependencies]

# Lints applied to every crate that opts in via `[lints] workspace = true`.
# `unsafe_code` is not forbidden: the macOS URL handling requires objc2 FFI.
[workspace.lints.clippy]
all = { level = "warn", priority = -1 }

# Aggressively minimise the release binary (disk + resident memory) while
# keeping startup fast (static, no launch-time decompression).
# `scripts/build.sh` layers nightly `build-std` + `panic_immediate_abort` on top.
[profile.release]
opt-level = "z"     # optimise for size
lto = true          # cross-crate inlining + dead-code elimination
codegen-units = 1   # maximise optimisation (at the cost of compile time)
panic = "abort"     # drop unwinding tables and landing pads
strip = true        # remove symbols and debug info
debug = false
