[package]
name = "ff-router"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true

[[bin]]
name = "ff-router"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", default-features = false, features = ["parse", "serde"] }
# Full Unix-shell glob matching (classes, ranges, negation, `{a,b}`, `\` escapes).
# `default-features = false` drops the optional `log` dep to trim the binary.
globset = { version = "0.4", default-features = false }

# macOS-only: register as default browser and receive clicked URLs.
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6.4"
block2 = "0.6"
objc2-app-kit = { version = "0.3.2", default-features = false, features = [
    "std",
    "block2",
    "libc",             # unlocks NSRunningApplication::runningApplicationWithProcessIdentifier
    "NSApplication",
    "NSResponder",
    "NSRunningApplication",
    "NSWorkspace",
] }
objc2-foundation = { version = "0.3.2", default-features = false, features = [
    "std",
    "NSAppleEventDescriptor",  # read the sender PID off the URL Apple Event
    "NSAppleEventManager",     # `currentAppleEvent` inside `application:openURLs:`
    "NSArray",
    "NSBundle",
    "NSEnumerator",
    "NSError",
    "NSString",
    "NSURL",
] }
